--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,15 @@
+certifi==2021.5.30
+chardet==4.0.0
 click==8.0.1
+decorator==4.4.2
 Flask==1.1.2
 gunicorn==20.0.4
+idna==2.10
 itsdangerous==2.0.1
 Jinja2==3.0.1
 MarkupSafe==2.0.1
+networkx==2.5.1
+psycopg2==2.8.6
+requests==2.25.1
+urllib3==1.26.5
 Werkzeug==2.0.1
